# gst_learn

./: Cargo.toml  README.md  REEADME.md
gst-plugin-tutorial/: Cargo.toml  README.md
gst-plugin-tutorial/src/: lib.rs
gst-plugin-tutorial/src/rgb2gray/: imp.rs  mod.rs
gst_learn/: Cargo.toml
gst_learn/src/: main.rs
src/: main.rs
