[package]
name = "gst-plugin-tutorial"
version = "0.1.0"
edition = "2021"
description = "Rust Tutorial Plugin"
repository = "https://github.com/uzuna/gst_learn"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gstrstutorial"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
gst = { package = "gstreamer", version = "0.18.6"}
gst-video = { package = "gstreamer-video", version = "0.18.5"}
gst-base = { package = "gstreamer-base", version = "0.18.0"}
once_cell = "1.10.0"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"
