[package]
name = "gst_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
byte-slice-cast = "1.2.1"
env_logger = "0.9.0"
gdk = {version="0.15.4", optional = true}
glib = "0.15.6"
gstreamer = "0.18.3"
gstreamer-app = "0.18.0"
gstreamer-audio = "0.18.5"
gstreamer-pbutils = "0.18.0"
gstreamer-video = { version = "0.18.5", optional = true }
gtk = {version="0.15.4", optional = true}
log = "0.4.14"
structopt = "0.3.26"
termion = "1.5.6"

[features]
default = ["tutorial5-x11"]
tutorial5 = ["gtk", "gdk", "gstreamer-video"]
tutorial5-x11 = ["tutorial5"]
